# flt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.md  MANIFEST.in  README.md  dctdlt.c  flt.pyx  pyproject.toml  setup.cfg  setup.py  test_flt.py
.github/workflows/: cibuildwheel.yml  publish.yml  tests.yml
docs/: conf.py  index.rst
src/: dctdlt.c  testmat.c
src/flt/: __init__.py  base.pyx  generic.py  jax.py  numpy.pyx
tests/: conftest.py  test_generic.py  test_jax.py  test_numpy.py
