[build-system]
requires = [
    "setuptools>=74.1",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "flt"
version = "2025.1"
maintainers = [
    { name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk" },
]
description = "Fast Legendre transform for NumPy and JAX"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]
doc = [
    "sphinx",
    "furo",
    "sphinxcontrib-katex",
    "numpydoc",
]

[project.urls]
Homepage = "https://github.com/ntessore/flt"

[tool.setuptools]
packages = ["flt"]
package-dir = { "" = "src" }
license-files = [
    "LICENSE",
]
include-package-data = false

[[tool.setuptools.ext-modules]]
name = "flt.numpy"
sources = ["src/flt/numpy.pyx", "src/dctdlt.c"]
