[metadata]
name = flt
version = 2022.7.27
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = fast Legendre transform
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/ntessore/flt
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
